# fair-allocation-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_exchange.ipynb
baselines/: neural_rr_adapter.py
benchmarks/: benchmark_exchangeable_layers.py
configs/: best_30_60_sweep.yaml  best_from_sweep.yaml  best_from_sweep_residual.yaml  example_config.yaml  residual_30_60.yaml  residual_30_60_large.yaml  variable_size_default.yaml
eef1-nn/: eef1nn_input.py  helper.py  loss.py  net.py  train.py
eval_pipeline/: METRICS_VERIFICATION_SUMMARY.md  README.md  analyze_and_plot.py  analyze_variable_size.py  auto_run_evals.py  compare_linear_vs_residual.py  compare_neural_rr.py  compare_residual_vs_baselines.py  compare_results.py  demo_ece.py  evaluate_100x100.py  evaluate_30_60_production.py  evaluate_all_models_comparison.py  evaluate_heatmap_30_60.py  evaluate_heatmap_30_60_large.py  evaluate_heatmap_comparison.py  evaluate_heatmap_comparison_rr.py  evaluate_heatmap_from_datasets.py  evaluate_heatmap_model_comparison.py  evaluate_multi_model.py  evaluate_multi_model_large.py  evaluate_residual_all_sizes.py  evaluate_residual_generalization.py  evaluation.py  generate_dataset.py  generate_graphs.py  generate_heatmap_data.py  generate_heatmap_data_both.py  generate_heatmap_data_ef1.py  generate_heatmap_datasets.py  generate_heatmap_datasets_parallel.py  generate_mnw_datasets.py  load_best_model.py  load_best_model_residual.py  plot_heatmap_30_60.py  plot_heatmap_comparison.py  plot_heatmap_comparison_rr.py  plot_heatmap_model_comparison.py  plot_heatmaps.py  (+25 more)
(+72 files in other folders)
