[project]
name = "envy-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=12.0.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]
